--- a/locales/zh.yml
+++ b/locales/zh.yml
@@ -1,27 +1,36 @@
 routes:
   chat: "聊天路由"
   models: "模型路由"
-  download: "下载路由"
 
 errors:
-  model_not_available: "模型不可用"
-  model_not_found: "未找到模型"
-  model_not_loaded: "模型加载失败: {}"
-  output_processing_failed: "输出处理失败: {}"
-  authentication_failed: "认证失败"
-  invalid_api_key: "无效的API密钥"
-  bad_request: "错误请求"
-  internal_server_error: "内部服务器错误"
-  not_found: "未找到"
-  unauthorized: "未授权"
-  forbidden: "禁止访问"
-  service_unavailable: "服务不可用"
-  serialization_failed: "序列化失败: {}"
-  service_unavailable_detail: "服务不可用: {}, URI: {}, 方法: {}"
-  service_not_ready: "服务未就绪, URI: {}, 方法: {}"
-  conversion_failed: "错误转换失败: {}, URI: {}, 方法: {}"
+  model:
+    not_available: "模型不可用"
+    not_found: "未找到模型"
+    not_loaded: "模型加载失败: {}"
+  processing:
+    output_failed: "输出处理失败: {}"
+    serialization_failed: "序列化失败: {}"
+    conversion_failed: "错误转换失败: {}, URI: {}, 方法: {}"
+  authentication:
+    failed: "认证失败"
+    invalid_api_key: "无效的API密钥"
+  http:
+    bad_request: "错误请求"
+    internal_server_error: "内部服务器错误"
+    not_found: "未找到"
+    unauthorized: "未授权"
+    forbidden: "禁止访问"
+    service_unavailable: "服务不可用"
+    service_unavailable_detail: "服务不可用: {}, URI: {}, 方法: {}"
+    service_not_ready: "服务未就绪, URI: {}, 方法: {}"
+    invalid_status_code: "无效状态码 {} - 回退到500"
+  tokenizer:
+    error: "分词器错误: {}"
+  validation:
+    invalid_parameter: "无效参数: {}"
+  generic:
+    error: "通用错误: {}"
   error_occurred: "发生错误 - URI: {}, 方法: {}, 错误: {}, 响应: {}"
-  invalid_status_code: "无效状态码 {} - 回退到500"
 
 models:
   yi_coder: "Yi-Coder"
@@ -36,3 +45,6 @@ responses:
 download:
   request: "收到模型下载请求：{}"
   success: "成功下载模型：{}"
+
+init:
+  failed: "初始化应用程序失败"
